# waltopanel

./: .gitignore  Cargo.toml  PKGBUILD  style.css  waltopanel-0.1.0-1-x86_64.pkg.tar.zst  waltopanel-debug-0.1.0-1-x86_64.pkg.tar.zst  waltopanel.service
pkg/waltopanel/: .BUILDINFO  .MTREE  .PKGINFO
pkg/waltopanel-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: app.rs  config.rs  curtain_bar.rs  lib.rs  main.rs  system_panel.rs
src/helpers/: mod.rs  ui_helpers.rs
src/models/: config.rs  menu_item.rs  mod.rs
src/models/menu_item_model/: api.rs  builder.rs  imp.rs  menu_item_model.rs  mod.rs
src/panel_buttons/: mod.rs
src/panel_buttons/battery_button/: battery_button.rs  battery_service.rs  mod.rs
src/panel_buttons/brightness_button/: brightness_service.rs  brightness_slider.rs
src/panel_buttons/clock_button/: clock_button.rs  mod.rs
src/panel_buttons/consolidate_button/: consolidate_button.rs  mod.rs
src/panel_buttons/launch_button/: launch_button.rs  mod.rs
src/panel_buttons/microphone_button/: microphone_service.rs  microphone_slider.rs
src/panel_buttons/network_button/: network_button.rs  network_service.rs
src/panel_buttons/sound_button/: mod.rs  sound_button.rs  sound_service.rs  volume_slider.rs
src/panel_buttons/system_button/: system_button.rs
src/panel_buttons/system_metrics_button/: mod.rs  (+2 more)
src/traits/: composite_widget.rs  list_box_extensions.rs  mod.rs  popover_extensions.rs  widget_extensions.rs
src/types/: mod.rs  typed_list_store.rs
src/waltopanel-0.1.0/: style.css
src/widgets/: dropdown_button.rs  mod.rs
(+92 files in other folders)
