[package]
name = "curtain_bar"
version = "0.1.0"
edition = "2024"


[dependencies]
gtk = { version = "0.9", package = "gtk4" }
adw = { version = "0.7", package = "libadwaita" }
gtk4-layer-shell = "0.5"
uuid = { version = "1.19.0", features = ["v4"] }
indexmap = "2.12.1"
libc = "0.2.179"
chrono = "0.4.42"
serde_json = "1.0"
zbus = "5.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
